# sparrow

./: .gitignore  Cargo.toml  README.md  build
crates/agent/: Cargo.toml
crates/agent/src/: config.rs  config_reload.rs  heartbeat.rs  interval_task.rs  lib.rs  main.rs  publisher.rs  scheduler.rs
crates/agent/tests/: agent_integration.rs  broker_security_live.rs  config_reload_live.rs
crates/agent/tests/support/: mod.rs
crates/server/: Cargo.toml  Dockerfile
crates/server/src/: alerting.rs  config.rs  ingest.rs  lib.rs  main.rs  offline_watch.rs
crates/server/src/api/: agent_config.rs  analyst.rs  history.rs  hosts.rs  mod.rs  problems.rs
crates/server/tests/: e2e.rs  ingest_live.rs  offline_watch_live.rs
crates/server/tests/support/: mod.rs
crates/sparrow-core/: Cargo.toml
crates/sparrow-core/src/: collector.rs  config.rs  interval_task.rs  lib.rs  migrations.rs  storage.rs  time.rs  transport.rs  trigger.rs
crates/sparrow-core/src/analyst/: embedder.rs  loop.rs  mod.rs  tools.rs
crates/sparrow-core/src/collectors/: cpu.rs  disk.rs  memory.rs  mod.rs
deploy/: .gitignore  README.md  docker-compose.yml  server.toml.example  sparrow-agent.service  sparrow-server.service
deploy/mosquitto/: .gitignore  README.md  acl.conf  generate-certs.sh  mosquitto.conf  provision-user.sh
deploy/mosquitto/certs/: .gitignore
desktop/: build  config.toml
desktop/src-tauri/: Cargo.toml  IPC_CONVENTIONS.md  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs  state.rs
desktop/src-tauri/src/commands/: analyst.rs  hosts.rs  mod.rs  problems.rs
desktop/ui/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
desktop/ui/src/: App.test.tsx  App.tsx  index.css
desktop/ui/src/components/: AnalystPanel.test.tsx  AnalystPanel.tsx  HostDetail.test.tsx  HostDetail.tsx  HostList.test.tsx  HostList.tsx  ProblemsPanel.test.tsx  ProblemsPanel.tsx  TitleBar.tsx  WindowControls.tsx
desktop/ui/src/lib/: api.ts  fontawesome.ts  nest.ts  tauri.ts
docs/: api-reference.md  architecture.md  authoring-collectors.md  getting-started.md
docs/plans/: phase-10-ai-health-analyst.md  phase-11-desktop-dashboard.md  phase-12-security-hardening.md  phase-13-packaging-deployment.md  phase-14-testing-docs-polish.md  phase-4-sparrow-core-contracts.md  phase-5-collectors.md  phase-6-agent.md  phase-7-server.md  phase-8-trigger-alerting.md  phase-9-config-push.md  sparrow-project-plan.md
