[package]
name = "sparrow-agent"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
nest-cli = { workspace = true, features = ["async"] }
nest-config = { workspace = true }
nest-core = { workspace = true }
nest-error = { workspace = true }
nest-mqtt = { workspace = true }
nest-task = { workspace = true }
nest-task-runtime = { workspace = true }
sparrow-core = { path = "../sparrow-core" }
async-trait = "0.1"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
clap = "4"
sysinfo = "0.39"

[dev-dependencies]
testcontainers = "=0.23.3"
