[package]
name = "sparrow-server"
version.workspace = true
edition.workspace = true

[dependencies]
nest-error = { workspace = true }
nest-http-serve = { workspace = true }
nest-mqtt = { workspace = true }
nest-task = { workspace = true }
sparrow-core = { path = "../sparrow-core" }
async-trait = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
sqlx = { version = "0.9", features = ["postgres", "runtime-tokio"] }
tracing = "0.1"

[dev-dependencies]
nest-core = { workspace = true }
nest-data = { workspace = true }
nest-data-postgres = { workspace = true }
nest-task-runtime = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
testcontainers = "=0.23.3"
testcontainers-modules = { version = "=0.11.6", features = ["postgres"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
