[package]
name = "sparrow-desktop"
version.workspace = true
edition.workspace = true
description = "Sparrow desktop dashboard (Tauri + React)"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
nest-config = { workspace = true }
nest-error = { workspace = true, features = ["serde"] }
nest-http-client = { workspace = true }
nest-tauri = { workspace = true, features = ["runtime"] }
nest-theme = { workspace = true }
sparrow-core = { path = "../../crates/sparrow-core" }
serde = { workspace = true }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
